# sim_software

./: README.md
common_robot_description/: CMakeLists.txt  package.xml
common_robot_description/config/: common_thrusters.yaml  thruster_t200.yaml
common_robot_description/xacro/: common_joints.xacro  common_links.xacro  common_sensors.xacro  common_tags.xacro  common_thrusters.xacro
freefloating_gazebo/: CMakeLists.txt  README.md
freefloating_gazebo/src/: freefloating_gazebo_fluid.cpp
grotto/: CMakeLists.txt  package.xml
grotto/launch/: robosub2016.launch
maelstrom_description/: CMakeLists.txt  package.xml
maelstrom_description/config/: base.yaml  sensors.yaml
maelstrom_description/launch/: simulation.launch  upload.launch  upload_maelstrom.launch
maelstrom_description/meshes/: maelstrom.blend  maelstrom.blend1  maelstrom.dae  maelstromColored.dae  maelstrom_basic_color_scheme.blend
maelstrom_description/meshes/maelstrom/: model.config
maelstrom_description/meshes/maelstrom/scripts/: supreme.material
maelstrom_description/model/config/: base.yaml  sensors.yaml  thrusters.yaml
maelstrom_description/model/meshes/: collision.stl  maelstrom.blend  maelstrom.dae  prop.dae
maelstrom_description/model/meshes/maelstrom/: maelstrom.sdf
maelstrom_description/model/robots/: maelstrom.urdf.xacro
maelstrom_description/model/xacro/: base.xacro  maelstrom.urdf  properties.xacro  sensors.xacro  snippets.xacro  thrusters.xacro
maelstrom_description/robots/: default.xacro  maelstrom.urdf
maelstrom_description/scripts/: gen_properties.py
maelstrom_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  maelstrom.urdf.xacro  properties.xacro  sensors.xacro  snippets.xacro  thrusters.xacro
puddles_description/: CMakeLists.txt  package.xml
puddles_description/config/: base.yaml  sensors.yaml  thrusters.yaml
puddles_description/launch/: rviz.launch
puddles_description/meshes/: puddles.dae
puddles_description/urdf/: base.xacro  puddles.urdf.xacro  sensors.xacro  thrusters.xacro
riptide_descriptions/: CMakeLists.txt  package.xml
riptide_descriptions/config/: puddles.yaml
riptide_descriptions/launch/: rviz.launch  upload_puddles.launch
riptide_descriptions/robots/: puddles_default.xacro
riptide_descriptions/urdf/: puddles.gazebo.xacro  puddles_base.xacro  puddles_sensors.xacro  robot.gazebo.xacro  robot_actuators.xacro  robot_base.xacro  robot_sensors.xacro  snippets.xacro
riptide_gazebo/: CMakeLists.txt  package.xml  setup.py
riptide_gazebo/cfg/: dvl_formatting_cfg.yaml
riptide_gazebo/include/riptide_gazebo/: inertial_sensors.hpp  lord_imu_sim.hpp
riptide_gazebo/launch/: depth_converter.launch  depth_sensor_node.launch  dvl_converter.launch  imu_converter.launch  inertial_sensors.launch  lord_imu_node.launch  maelstrom.launch  maelstrom_cutie.launch  maelstrom_lake.launch  nortek_dvl_node.launch  puddles_cutie.launch  puddles_lake.launch  sensor_converters.launch  sensor_remap.launch  thrust_converter.launch
riptide_gazebo/models/cutie/: model.sdf
riptide_gazebo/models/cutie/materials/scripts/: repeated.material
riptide_gazebo/models/cutie/meshes/: cutie.dae
riptide_gazebo/models/orange_pole/: pole.stl
riptide_gazebo/scripts/: depth_converter.py  depth_sensor_node  dvl_converter.py  imu_converter.py  nortek_dvl_node  thrust_converter.py  thrust_converter_node  thrust_remap.py
riptide_gazebo/src/: inertial_sensors.cpp  inertial_sensors_node.cpp  lord_imu_sim.cpp  lord_imu_sim_node.cpp
riptide_gazebo/src/riptide_gazebo/: depth_sensor_sim.py  nortek_dvl_sim.py  thrust_converter.py
riptide_gazebo/worlds/: cutie.world
riptide_simulation/: CMakeLists.txt  package.xml  setup.py
riptide_simulation/cfg/: dvl_formatting_cfg.yml  quat_to_euler_imu_cfg.yaml  quat_to_euler_imu_cfg.yml  remap_pwm_cfg.yaml  remap_pwm_cfg.yml  remap_thrust_cfg.yaml
riptide_simulation/models/orange_gate/: gate.stl
riptide_simulation/src/: debug.txt  dvl_formatting.py  quat_to_euler_imu.py  remap_pwm.py  remap_thrust.py
riptide_simulation/src/riptide_simulation/: depth_formatting.py  dvl_formatting.py  quat_to_euler_imu.py  remap_thrust.py
robosub_gazebo/: package.xml
robosub_gazebo/launch/: robosub2016.launch  robosub2017.launch
robosub_gazebo/models/: database.config
robosub_gazebo/models/buoy/: model.config  model.sdf
robosub_gazebo/models/channel/: model.sdf
robosub_gazebo/models/gate/: model.sdf
robosub_gazebo/models/path/: model.sdf
robosub_gazebo/worlds/: robosub2016.world  robosub2017.world
robosub_sim_pkgs/: CMakeLists.txt  package.xml  roomba.cfg
robosub_stage/: CMakeLists.txt  package.xml
robosub_stage/launch/: create2.launch
robosub_stage/worlds/: cave.inc  cave.yaml  create2.inc  create2.world
robosub_unreal/: CMakeLists.txt  package.xml
sim_common/: CMakeLists.txt  package.xml
sim_common/cfg/: remap_thrust_cfg.yml
sim_common/launch/: robosub2017.launch
sim_common/models/orange_gate/: model.config  model.sdf
sim_common/worlds/: qualify.world  underwater.world
uuv_simulator/uuv_descriptions/launch/: lake.launch
uuv_simulator/uuv_descriptions/models/common/urdf/: maelstrom.urdf
uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_plugins/include/uuv_gazebo_plugins/: ThrusterPlugin.hh
uuv_simulator/uuv_gazebo_plugins/uuv_gazebo_plugins/src/: ThrusterPlugin.cc  UnderwaterObjectPlugin.cc
