<?xml version="1.0"?>
<package format="2">
  <name>common_robot_description</name>
  <version>0.0.0</version>
  <description>The common_robot_description package</description>

  <maintainer email="tsender@todo.todo">tsender</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
