<?xml version="1.0"?>
<package format="2">
  <name>puddles_description</name>
  <version>0.0.1</version>
  <description>Contains URDF for the OSU Underwater Robotics Team puddles vehicle.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">uwrt.engineering.osu.edu</url>
  <url type="repository">http://github.com/uwrt-osu/sim_software</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>common_robot_description</depend>

  <export>
  </export>
</package>
