<?xml version="1.0"?>
<package>
  <name>riptide_simulation</name>
  <version>0.0.1</version>
  <description>Common simulation package for The OSU Underwater Robotics Team's Riptide AUV software platform.</description>

  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/sim_software</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
